--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ debugpy==1.6.7
 decorator==5.1.1
 defusedxml==0.7.1
 Django==4.2.4
+django-bootstrap==0.2.4
 djangorestframework==3.14.0
 dnspython==2.4.2
 entrypoints==0.4
