--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ asgiref==3.7.2
 async-timeout==4.0.3
 attrs==23.1.0
 certifi==2023.7.22
+cffi==1.15.1
 charset-normalizer==3.2.0
 click==8.1.7
 colorama==0.4.6
+cryptography==41.0.3
 dataclasses-json==0.5.14
 Django==4.2.5
 djangorestframework==3.14.0
@@ -22,13 +24,18 @@ loguru==0.7.2
 marshmallow==3.20.1
 multidict==6.0.4
 mypy-extensions==1.0.0
+ndg-httpsclient==0.5.1
 nltk==3.8.1
 numexpr==2.8.6
 numpy==1.26.0
+openai==0.28.0
 packaging==23.1
 pinecone-client==2.2.4
+pyasn1==0.5.0
+pycparser==2.21
 pydantic==2.3.0
 pydantic_core==2.6.3
+pyOpenSSL==23.2.0
 PyPDF2==3.0.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
@@ -39,6 +46,7 @@ six==1.16.0
 SQLAlchemy==2.0.21
 sqlparse==0.4.4
 tenacity==8.2.3
+tiktoken==0.5.1
 tqdm==4.66.1
 typing-inspect==0.9.0
 typing_extensions==4.8.0
