--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,53 @@
-anaconda-client==1.12.0
-anaconda-navigator==2.4.2
-appdirs==1.4.4
-atomicwrites==1.4.0
-backports.weakref==1.0.post1
-brotlipy==0.7.0
-clyent==1.2.2
-conda-repo-cli==1.0.41
-conda-verify==3.4.2
-constantly==15.1.0
-cssselect==1.1.0
-daal4py==2023.1.1
-datashape==0.5.4
-et-xmlfile==1.1.0
-fonttools==4.25.0
-inflection==0.5.1
-jsonpointer==2.1
-mkl-fft==1.3.6
-mkl-service==2.4.0
-munkres==1.1.4
-mypy-extensions==0.4.3
-navigator-updater==0.4.0
-openpyxl==3.0.10
-pandas==1.5.3
-patsy==0.5.3
-pep8==1.7.1
-Pillow==9.4.0
-ply==3.11
+aiohttp==3.8.5
+aiosignal==1.3.1
+annotated-types==0.5.0
+anyio==3.7.1
+asgiref==3.7.2
+async-timeout==4.0.3
+attrs==23.1.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.7
+dataclasses-json==0.6.1
+Django==4.2.5
+djangorestframework==3.14.0
+dnspython==2.4.2
+frozenlist==1.4.0
+greenlet==2.0.2
+idna==3.4
+joblib==1.3.2
+jsonpatch==1.33
+jsonpointer==2.4
+langchain==0.0.302
+langsmith==0.0.40
+loguru==0.7.2
+marshmallow==3.20.1
+multidict==6.0.4
+mypy-extensions==1.0.0
+nltk==3.8.1
+numexpr==2.8.7
+numpy==1.26.0
+packaging==23.1
+pinecone-client==2.2.4
 psycopg2==2.9.7
-pyarrow==11.0.0
-pyasn1-modules==0.2.8
-pycurl==7.45.2
-PyDispatcher==2.0.5
-pyls-spyder==0.4.0
-PyQt5-sip==12.11.0
+pydantic==2.4.1
+pydantic_core==2.10.1
+PyPDF2==3.0.1
+python-dateutil==2.8.2
 python-dotenv==1.0.0
-python-lsp-jsonrpc==1.0.0
-queuelib==1.5.0
-scikit-learn-intelex==20230426.111612
-scipy==1.10.1
-TBB==0.2
-webencodings==0.5.1
+pytz==2023.3.post1
+PyYAML==6.0.1
+regex==2023.8.8
+requests==2.31.0
+scipy==1.11.2
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==2.0.21
+sqlparse==0.4.4
+tenacity==8.2.3
+tqdm==4.66.1
+typing-inspect==0.9.0
+typing_extensions==4.8.0
+urllib3==2.0.5
 whitenoise==6.5.0
-
+yarl==1.9.2
