--- a/.github/workflows/main_unitechchat.yml
+++ b/.github/workflows/main_unitechchat.yml
@@ -42,6 +42,17 @@ jobs:
           path: |
             . 
             !venv/
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
   deploy:
     runs-on: ubuntu-latest
