--- a/.github/workflows/main_unitechaibot.yml
+++ b/.github/workflows/main_unitechaibot.yml
@@ -29,7 +29,8 @@ jobs:
       
       - name: Install dependencies
         run: pip install -r requirements.txt
-        
+      - name: Collect Static Files
+        run: python manage.py collectstatic --noinput
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
       - name: Upload artifact for deployment jobs
