--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ mypy-extensions==1.0.0
 nltk==3.8.1
 numexpr==2.8.7
 numpy==1.26.0
+openai==0.28.1
 packaging==23.1
 pinecone-client==2.2.4
 psycopg2==2.9.7
@@ -45,6 +46,7 @@ sniffio==1.3.0
 SQLAlchemy==2.0.21
 sqlparse==0.4.4
 tenacity==8.2.3
+tiktoken==0.5.1
 tqdm==4.66.1
 typing-inspect==0.9.0
 typing_extensions==4.8.0
