--- a/.github/workflows/main_unitechaibot.yml
+++ b/.github/workflows/main_unitechaibot.yml
@@ -2,7 +2,7 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - UnitechAIBot
+name: Build and deploy Python app to Azure Web App - unitechchat
 
 on:
   push:
@@ -29,9 +29,10 @@ jobs:
       
       - name: Install dependencies
         run: pip install -r requirements.txt
-        
+      
       - name: Collect Static Files
         run: python manage.py collectstatic --noinput
+        
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
       - name: Upload artifact for deployment jobs
@@ -41,7 +42,6 @@ jobs:
           path: |
             . 
             !venv/
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -60,6 +60,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'UnitechAIBot'
+          app-name: 'unitechchat'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_44CD402CEA434398839D495B7079A492 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_95B18C1B78494E04B47EB188542B3FE4 }}
