--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,13 @@ anyio==3.7.1
 asgiref==3.7.2
 async-timeout==4.0.3
 attrs==23.1.0
+azure-core==1.29.4
+azure-storage-blob==12.18.2
 certifi==2023.7.22
+cffi==1.16.0
 charset-normalizer==3.2.0
 click==8.1.7
+cryptography==41.0.4
 dataclasses-json==0.6.1
 Django==4.2.5
 django-storages==1.14
@@ -16,6 +20,7 @@ dnspython==2.4.2
 frozenlist==1.4.0
 greenlet==2.0.2
 idna==3.4
+isodate==0.6.1
 joblib==1.3.2
 jsonpatch==1.33
 jsonpointer==2.4
@@ -32,6 +37,7 @@ openai==0.28.1
 packaging==23.1
 pinecone-client==2.2.4
 psycopg2==2.9.7
+pycparser==2.21
 pydantic==2.4.1
 pydantic_core==2.10.1
 PyPDF2==3.0.1
